--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ header{
     background-color: #140343bd;
     color: black;
 }
+.imagem-1 {
+    width: 40%;
+    align-items: center;
+    margin-left: 200px;
+   }
