--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ header{
     background-color: #140343bd;
     color: black;
 }
-.imagem-1 {
+.roupa1 {
     width: 40%;
     align-items: center;
     margin-left: 200px;
