--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header{
 }
 .roupa1 {
     width: 35%;
-    align-items: last baseline;
+    align-items: center;
     margin-left: 20px;
    }
 body{
