--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ header{
     color: rgb(255, 255, 255);
 }
 .roupa1 {
-    width: 35%;
+    width: 315px; ;
     align-items: center;
     margin-left: 450px;
-  height: 300px; ;;  
+  height: 272px; ;;  
+  
 }
 body{
  background-color: #2b0790bd;
