--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header{
     color: rgb(255, 255, 255);
 }
 .roupa1 {
-    width: 315px; ;
+    width: 40%; ;
     align-items: center;
     margin-left: 450px;
   height: 272px; ;;  
