--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
     width: 40%; ;
     align-items: center;
     margin-left: 450px;
-  height: 272px; ;;  
+  height: 39%; ;;  
   
 }
 body{
