--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header{
 }
 .roupa1 {
     width: 40%; ;
-    align-items:   last baseline;
+    align-items:   baseline;
     margin-left: 45px;
   height: 39%; ;;  
   
