--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 .icones {
   width: 120px;
  padding: 10px;
- align-items: baseline;
+ align-items: first baseline;
  height: 100px; ;;  
 margin-left: 10%;
 }
