--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
 margin-left: 10%;
 }
 
-header {
-  font-family: 'Poppins', sans-serif;
+.bungee-spice-regular {
+  font-family: "Bungee Spice", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-
