--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 margin-left: 10%;
 }
 
-.bungee-spice-regular {
+body {
   font-family: "Bungee Spice", sans-serif;
   font-weight: 400;
   font-style: normal;
