--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ margin-left: 10%;
 }
 
 body {
-  font-family: "Bungee Spice", sans-serif;
+  font-family: "Permanent Marker", cursive;
   font-weight: 400;
   font-style: normal;
 }
