--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+.KTX  {
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
