--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-.titulo {  width: 10%;
+.titulo { 
   text-align: center;
   margin-left: 450px;
 }
