--- a/style.css
+++ b/style.css
@@ -1,37 +1,85 @@
-header{
-    background-color: #140343bd;
-    color: rgb(255, 255, 255);
+*{
+  margin: 0;
+  padding: 0;
 }
-.roupa1 {
-    width: 40%; ;
-    align-items:  center;
-    margin-left: 450px;
-  height: 39%; ;;  
-  
-}
-body{
- background-color: #2b0790bd;
-}
-
-.icones {
-  width: 120px;
- padding: 10px;
- align-items: 10px;
- height: 100px; ;;  
-margin-left: 10%;
-}
-
 body {
-  font-family: "Permanent Marker", cursive;
-  font-weight: 400;
-  font-style: normal;
+  font-family: 'Poppins', sans-serif;
 }
-.KTX  {
-  font-family: "Lilita One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.cabecalho {
+  background-color: #8500b9;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 24px 0;
 }
-.titulo { 
+
+.cabecalho-imagem{
+  width: 10%;
+}
+
+.cabecalho-lista-item{
+  display: inline-block;
+  margin: 0 16px;
+  font-size: 16px;
+}
+
+.escola-imagem{
+  width: 25%;
+}
+
+.escola{
+  background-image: linear-gradient(#9700dd,#8f37e2);
+  color:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
+}
+
+.escola-div-conteudo{
+  width: 35%;
+}
+
+
+.escola-titulo{
+  padding: 24px 0;
+}
+
+.estudante{
+  padding: 24px 0;
+}
+.estudante-imagem{
+  width: 120px;
+}
+
+.estudante-icone{
+  width: 24px;
+  padding: 4px 8px;
+}
+
+.estudante-div{
   text-align: center;
-  margin-left: 10px;
+  padding: 16px 0;
+}
+
+.estudante-titulo{
+  text-align: center;
+  padding: 50px 0;
+}
+
+.estudante-todos{
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+  background-color: black;
+  text-align: center;
+}
+
+.rodape-imagem{
+  height: 60px;
+  padding: 12px 0;
+ 
 }
