--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   color: white;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: baseline;
   padding: 24px 5;
 }
 
