--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   background-color: #8500b9;
   color: white;
   display: flex;
- 
   align-items: baseline;
  ;
 }
@@ -21,8 +20,8 @@ body {
 
 .cabecalho-lista-item{
   display: inline-block;
-
-  font-size: 16px;
+ align-items:  last baseline; right: 40%;
+ padding: 15px;
 }
 
 .escola-imagem{
