--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
 }
 
 .cabecalho-lista-item{
-  justify-content: flex-end;
-  align-items:self-end;
- 
-}
+  display: inline-block;
+    margin: 0 16px;
+    font-size: 16px;
+  }
 
 .escola-imagem{
   width: 25%;
