--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 .cabecalho-lista-item{
   display: inline-block;
+  justify-content: flex-end;
     margin: 0 16px;
     font-size: 16px;
   }
