--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ body {
 }
 
 .cabecalho-lista-item{
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
     margin: 0 160px;
     font-size: 16px;
    
