--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
 }
 
 .cabecalho-lista-item{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: inline-block;
+  justify-content: flex-end;
+  align-items: flex-end;
   padding: 24px 0;
     margin: 0 160px;
     font-size: 16px;
