--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .cabecalho-lista-item{
-  display: inline-block;
+  display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   padding: 24px 0;
