--- a/style.css
+++ b/style.css
@@ -60,6 +60,14 @@ body {
 .estudante-icone{
   width: 24px;
   padding: 4px 8px;
+border-radius: 50px;
+border: 0;
+background-color: white;
+box-shadow: black 0 0 8px;
+letter-spacing: 1.5px;
+text-transform: uppercase;
+font-size: 15px;
+transition: all .5s ease;
 }
 
 .produtos-div{
