--- a/style.css
+++ b/style.css
@@ -58,16 +58,18 @@ body {
 }
 
 .estudante-icone{
-  width: 24px;
-  padding: 4px 8px;
-border-radius: 50px;
-border: 0;
+border: 2px solid black;
+margin:  20px 40px;
+padding: 10px 20px;
+
+border-radius: 500px;
+
 background-color: white;
-box-shadow: black 0 0 20px;
-letter-spacing: 1.5px;
-text-transform: uppercase;
-font-size: 15px;
-transition: all .5s ease;
+color: black;
+font-weight: 700px;
+}
+.estudante-icone:hover {
+cursor: pointer;
 }
 
 .produtos-div{
