--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   width: 120px;
 }
 
-.estudante-icone{
+.button-icone{
 border: 2px solid black;
 margin:  20px 40px;
 padding: 10px 20px;
@@ -68,7 +68,7 @@ background-color: white;
 color: black;
 font-weight: 700px;
 }
-.estudante-icone:hover {
+.button-icone:hover {
 cursor: pointer;
 }
 
