--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ cursor: pointer;
 }
 
 .produtos-div{
-  display: flex;
+  margin: 16px 0;
   text-align: center;
   padding: 16px 0;
-  gap: 10px 10px;
+ 
 }
 
 .conteudo-titulo{
