--- a/style.css
+++ b/style.css
@@ -74,9 +74,9 @@ cursor: pointer;
 
 .produtos-div{
   margin: 0 16px;
-  display: flex;
   text-align: center;
   padding: 16px 0;
+  align-items: center;
  
 }
 
