--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ cursor: pointer;
   margin: 0 16px;
   text-align: center;
   padding: 16px 0;
-  align-items: center;
+  justify-content: space-between;
  
 }
 
