--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 .button-icone{
 border: 2px solid black;
 margin:  20px 40px;
-
+padding: 10px 20px;
 
 border-radius: 500px;
 
@@ -75,8 +75,8 @@ cursor: pointer;
 .produtos-div{
   margin: 0 16px;
   text-align: center;
-  padding: 16px 0;
-  justify-content: space-between;
+  padding: 1px 0;
+ 
  
 }
 
