--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ cursor: pointer;
   padding: 50px 0;
 }
 
-.produtos{
+.estudante-todos{
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
