--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ cursor: pointer;
 }
 
 .produtos-div{
-  margin: 0 16px;
-  padding-right: 20px 40px;
+  text-align: center;
+  padding: 16px 0;
  
 }
 
