--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ cursor: pointer;
 
 .estudante-todos{
   display: grid;
-  grid-template-columns: 20% 20% 20% 20% ;
+  grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
 .rodape{
