--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ cursor: pointer;
 .barra-pesquisa{
  display: flex;
  justify-content: center;
-background-color: #8500b9;
+background-color: #fefefe;
 padding: 1%;
 border-radius: 32px;
 box-shadow: rgba(100, 100, 111, 0.2) 0 7px 2px 0px;
