--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ cursor: pointer;
  display: flex;
  justify-content: center;
 background-color: #fefefe;
-padding: 10%;
+padding: 10px;
 border-radius: 32px;
 box-shadow: rgba(100, 100, 111, 0.2) 0 7px 2px 0px;
 }
