--- a/style.css
+++ b/style.css
@@ -136,6 +136,13 @@ width: 200px;
   width: 3%;
   cursor: pointer;
 }
+ 
+ .perfil { position: absolute;
+  top: 3%;
+   left: 94%;
+   width: 3%;
+   cursor: pointer;
+  }
 
 
 
