--- a/style.css
+++ b/style.css
@@ -137,10 +137,11 @@ width: 200px;
   cursor: pointer;
 }
  
- .perfil { position: absolute;
+ .perfil {
+   position: absolute;
   top: 3%;
    left: 94%;
-   width: 3%;
+   width: 2%;
    cursor: pointer;
   }
 
