--- a/style.css
+++ b/style.css
@@ -143,7 +143,12 @@ width: 200px;
    left: 94%;
    width: 3%;
    cursor: pointer;
-  }
+  } 
+  .escola-imagem {
+position: absolute
+top 25;
+
+ }
 
 
 
