--- a/style.css
+++ b/style.css
@@ -145,8 +145,9 @@ width: 200px;
    cursor: pointer;
   } 
   .escola-imagem {
-position: absolute
-top 25;
+ align-items: center;
+ width: 20%;
+
 
  }
 
