--- a/style.css
+++ b/style.css
@@ -144,12 +144,10 @@ width: 200px;
    width: 3%;
    cursor: pointer;
   } 
-  .escola-imagem {
+  .KTX {
  align-items: center;
  width: 50%;
-
-
- }
+}
 
 
 
