--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ cursor: pointer;
 .estudante-todos{
   display: grid;
   grid-template-columns: 20% 20% 20% 20%;
+  border: #8500b9;
 }
 
 .rodape{
